fix(contact): Fix contact form styling.

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -72,7 +72,7 @@ a {
     outline: none;
 
     &:after {
-      transform: translate3d(1rem, 0, 0);
+      transform: translate3d(.5em, 0, 0);
     }
   }
 
