--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -80,6 +80,7 @@
     padding: 1rem 1.5rem;
     outline: none;
     color: $cl-white;
+    font-family: $font-body;
     font-size: 1.8rem;
     font-weight: 700;
     border: none;
