--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -10,7 +10,7 @@
     padding: 1rem 1.5rem;
     border: .1em solid #D5D2EA;
     border-radius: .2em;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-family: $font-body;
     color: $cl-body;
     outline: none;
@@ -33,6 +33,11 @@
     border: 2px solid $cl-primary;
     border-radius: 2px;
     vertical-align: top;
+    outline: none;
+
+    &:focus {
+      box-shadow: 0 .2rem .4rem 0 rgba($cl-black, .5);
+    }
 
     &::after {
       content: '';
@@ -85,5 +90,9 @@
     font-weight: 700;
     border: none;
     background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z' fill='%23fff' /%3E%3C/svg%3E") $cl-primary no-repeat right 1rem center;
+
+    &:focus {
+      box-shadow: 0 .4rem 1rem 0 rgba($cl-black, .5);
+    }
   }
 }
