fix(contact): Update contact form UX and animations.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -120,6 +120,7 @@
 .link-button {
   display: inline-block;
   appearance: none;
+  background: transparent;
   padding: 0;
   border: 0;
   font-size: inherit;
