--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -188,8 +188,6 @@
 }
 
 .contact__selection {
-  transform: translateY(6rem);
-  margin-top: -12rem;
 
   &.is-hidden {
     margin: 0;
@@ -197,7 +195,7 @@
 
   .contact-form__step-content {
     align-items: center;
-    padding: 0 0 6rem;
+    padding: 0;
     max-width: 100%;
 
     @include media($screen-lg) {
@@ -209,8 +207,12 @@
     margin: 3rem 2rem 0;
 
     @include media($screen-sm) {
-      margin-top: 0;
+      margin-top: 6rem;
       text-align: center;
+    }
+
+    @include media($screen-lg) {
+      margin-top: 0;
     }
   }
 
@@ -221,10 +223,6 @@
       margin: 2rem;
       text-align: center;
     }
-  }
-
-  @include media($screen-lg) {
-    margin-top: -6rem;
   }
 }
 
@@ -399,6 +397,7 @@
   flex-wrap: wrap;
   align-items: center;
   margin-bottom: .5em;
+  transition: opacity 300ms, visibility 300ms;
 
   &.is-invalid {
     &::after {
@@ -424,17 +423,16 @@
   + .contact-form__question {
     margin-top: 1em;
   }
+
+  &[data-disabled] {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .contact-form__dependent {
   opacity: 1;
   visibility: visible;
-  transition: opacity 300ms, visibility 300ms;
-}
-
-.contact-form__dependent:disabled {
-  opacity: 0;
-  visibility: hidden;
 }
 
 .contact__steps-overview {
@@ -454,9 +452,14 @@
 
   [data-step='0'] &,
   [data-step='8'] & {
-    width: 0;
-    padding-left: 0;
-    padding-right: 0;
+    height: 0;
+    padding: 0 2.5rem;
+
+    @include media($screen-lg) {
+      height: 100%;
+      width: 0;
+      padding: 6rem 0;
+    }
   }
 
   @include media($screen-lg) {
@@ -539,6 +542,10 @@
 
   &:last-child {
     width: 1rem;
+
+    @include media($screen-lg) {
+      width: auto;
+    }
   }
 
   @include media($screen-lg) {
@@ -581,8 +588,12 @@
 
 .team-overview {
   width: 100%;
-  margin: 0 auto 5rem;
+  margin: 0 auto 1rem;
   overflow: hidden;
+
+  @include media($screen-lg) {
+    margin: 0 auto 5rem;
+  }
 }
 
 .team-overview__members {
@@ -709,4 +720,70 @@
     position: 50%;
   };
   cursor: pointer;
+}
+
+.mobile-overview {
+  .overview-step {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 0 0 2rem;
+    pointer-events: all;
+
+    &:last-child {
+      padding-bottom: 1rem;
+    }
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+  .overview-step__title {
+    display: block;
+    color: $cl-body;
+    font-size: 1.8rem;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      width: 1.8rem;
+      height: 1.8rem;
+      margin-left: .5ch;
+      background-image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path fill="#{$cl-body}" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>');
+      background-size: contain;
+      vertical-align: middle;
+    }
+  }
+
+  .overview-step__content {
+    display: block;
+    color: $cl-body;
+    font-size: 1.6rem;
+  }
+}
+
+.mobile-overview__content {
+  padding-top: 1rem;
+}
+
+.team-overview-end {
+  .team-overview__title {
+    display: none;
+  }
+
+  .team-overview {
+    margin: 0;
+  }
+
+  .team-overview__members {
+    margin: 0;
+
+    &::before {
+      margin: 0;
+    }
+  }
 }
