--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -406,7 +406,7 @@
       width: 100%;
       flex-shrink: 0;
       color: $cl-negative;
-      font-size: .8em;
+      font-size: .9em;
     }
   }
 
@@ -456,7 +456,7 @@
     padding: 0 2.5rem;
 
     @include media($screen-lg) {
-      height: 100%;
+      height: auto;
       width: 0;
       padding: 6rem 0;
     }
