--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -52,6 +52,8 @@
     margin: 0 2rem 3rem;
     font-size: 1.6rem;
     font-weight: 300;
+    line-height: 1.4;
+    color: darken($cl-body, 10%);
 
     @include media($screen-md) {
       font-size: 1.8rem;
@@ -103,7 +105,7 @@
   z-index: 2;
   position: relative;
   display: block;
-  padding: 3rem 2rem;
+  padding: 3rem 6rem 3rem 2rem;
   width: 100%;
   color: $cl-white;
   font-weight: 600;
@@ -111,7 +113,6 @@
   user-select: none;
   transition: color 500ms;
 }
-
 
 .faq__icon {
   position: absolute;
