fix(home): Remove unused button and fix contact anchor.
fix(contact): Remove pointer events on stamps.

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -43,6 +43,7 @@
   position: absolute;
   z-index: 3;
   opacity: 0;
+  pointer-events: none;
 
   .contact[data-step='8'] & {
     animation-name: stamp;
