fix(contact): Fix scrolling issue on next step in contact.

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -20,7 +20,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% + 100rem);
+    height: 100%;
     background-color: $cl-white;
     box-shadow: 0 0 .3rem .1rem rgba($cl-black, .3);
 
