--- a/src/scss/components/_selectionbox.scss
+++ b/src/scss/components/_selectionbox.scss
@@ -42,6 +42,7 @@
   flex-grow: 1;
   flex-shrink: 1;
   text-align: center;
+  white-space: nowrap;
 
   @include media($screen-sm) {
     text-align: left;
