--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -241,6 +241,8 @@
   text-align: center;
   font-family: $font-primary;
   font-size: 5rem;
+  line-height: 1;
+  margin-bottom: 2rem;
 
   + p {
     margin-top: 0;
@@ -253,9 +255,22 @@
   padding-bottom: 4.4rem;
   transition: padding 200ms;
 
-  [data-step='0'] &,
-  [data-step='8'] & {
+  [data-step='0'] & {
     padding: 0;
+  }
+
+  [data-step='7'] & {
+    padding: 0;
+  }
+
+  [data-step='8'] & {
+    padding: 0 0 1rem;
+  }
+
+  [data-step='8'] & {
+    @include media($screen-lg) {
+      padding: 0 0 5rem;
+    }
   }
 
   @include media($screen-lg) {
