fix(contact): Add 'delivering' message with throbber when submitting and fix issue with posting form.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -15,9 +15,13 @@
   cursor: pointer;
   user-select: none;
   transition: {
-    property: background-color, box-shadow;
+    property: background-color, box-shadow, padding-right;
     duration: 200ms;
   };
+
+  &:disabled {
+    pointer-events: none;
+  }
 }
 
 .button--primary {
