--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -297,8 +297,58 @@
     }
   }
 
+  .submit-button-holder {
+    margin-top: 2rem;
+  }
+
   .submit-button {
-    margin: 2rem auto 0 0;
+    position: relative;
+    display: inline-block;
+    height: 4rem;
+
+    > span {
+      transition: {
+        property: letter-spacing, font-size;
+        duration: 200ms;
+      }
+    }
+
+    > :last-child {
+      letter-spacing: 0;
+      font-size: 0;
+    }
+
+    + .throbber {
+      position: relative;
+      width: 4rem;
+      height: 4rem;
+      margin-left: -4rem;
+      background-image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" fill="#{$cl-white}" width="64px" height="64px" viewBox="0 0 128 128"><g><path d="M75.4 126.63a11.43 11.43 0 0 1-2.1-22.65 40.9 40.9 0 0 0 30.5-30.6 11.4 11.4 0 1 1 22.27 4.87h.02a63.77 63.77 0 0 1-47.8 48.05v-.02a11.38 11.38 0 0 1-2.93.37z" /><animateTransform attributeName="transform" type="rotate" from="0 64 64" to="360 64 64" dur="1000ms" repeatCount="indefinite"></animateTransform></g></svg>');
+      background-size: 2rem;
+      vertical-align: top;
+      transform: translateX(1rem) scale(.5);
+      opacity: 0;
+      transition: transform 200ms, opacity 200ms;
+    }
+
+    &:disabled {
+      padding-right: 4rem;
+
+      > :first-child {
+        letter-spacing: 0;
+        font-size: 0;
+      }
+
+      > :last-child {
+        letter-spacing: .1rem;
+        font-size: inherit;
+      }
+
+      + .throbber {
+        opacity: 1;
+        transform: translateX(0) scale(1);
+      }
+    }
   }
 }
 
