--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 
 @import 'components/clone';
 @import 'components/input';
+@import 'components/throbber';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/button';
