--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -16,27 +16,19 @@
   }
 }
 
-@keyframes slideUp {
+@keyframes slideUpShadow {
 
   0% {
     opacity: 0;
     transform: scale(.5) translate3d(0, 100%, 0);
-  } 50% {
-    opacity: 1;
-    transform: scale(.5) translate3d(0, 0, 0)
-  } 100% {
-    opacity: 1;
-    transform: scale(1) translate3d(0, 0, 0)
-  }
-}
-
-@keyframes slideUpShadow {
-
-  0% {
     box-shadow: 0 0 .3rem .1rem rgba($cl-black, .3);
   } 50% {
+    opacity: 1;
+    transform: scale(.5) translate3d(0, 0, 0);
     box-shadow: 0 0 .3rem .1rem rgba($cl-black, .3);
   } 100% {
+    opacity: 1;
+    transform: scale(1) translate3d(0, 0, 0);
     box-shadow: 0 -1rem 4rem 0 rgba($cl-black, .15);
   }
 }
