--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -22,7 +22,7 @@
   scroll-snap-align: center;
   opacity: 0;
   position: relative;
-  // overflow: hidden;
+  overflow: hidden;
   flex-basis: auto;
   width: 33.6rem;
   min-height: 45em;
