--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,4 +1,4 @@
-.navigation {
+.navigation--primary {
   display: flex;
   align-items: center;
   flex-grow: 0;
@@ -19,6 +19,33 @@
   @include media($screen-md) {
     margin-left: 0;
   }
+
+  .navigation__item {
+    animation: {
+      name: fadeIn;
+      duration: 800ms;
+      fill-mode: both;
+      timing-function: cubic-bezier(.215, .61, .355, 1);
+    }
+
+    @for $i from 1 through 4 {
+
+      &:nth-child(#{$i}) {
+        animation-delay: 150ms * $i + 200ms;
+      }
+    }
+  }
+}
+
+.navigation--footer {
+
+  @include media($screen-md) {
+    margin: 0 2rem 0 auto;
+  }
+
+  .navigation__anchor {
+    text-shadow: none;
+  }
 }
 
 .navigation__list {
@@ -34,19 +61,6 @@
 
 .navigation__item {
   margin-right: 3rem;
-  animation: {
-    name: fadeIn;
-    duration: 800ms;
-    fill-mode: both;
-    timing-function: cubic-bezier(.215, .61, .355, 1);
-  }
-
-  @for $i from 1 through 4 {
-
-    &:nth-child(#{$i}) {
-      animation-delay: 150ms * $i + 200ms;
-    }
-  }
 
   &:last-child {
     margin-right: 0;
@@ -54,6 +68,8 @@
 }
 
 .navigation__anchor {
+  position: relative;
+  display: block;
   color: $cl-white;
   font-weight: 700;
   letter-spacing: .1rem;
@@ -65,6 +81,5 @@
   &:hover,
   &:focus {
     color: rgba($cl-white, .6);
-    text-decoration: underline;
   }
 }
