--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -143,7 +143,7 @@
 }
 
 .member--empty {
-  pointer-events: none;
+  cursor: default;
 
   .member__avatar::before,
   .member__avatar::after {
@@ -255,6 +255,10 @@
   };
   line-height: 1.43;
   white-space: normal;
+
+  a {
+    color: $cl-secondary;
+  }
 }
 
 .member__anchor {
@@ -273,6 +277,10 @@
     property: color, box-shadow;
     duration: 400ms;
     timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  > * {
+    pointer-events: none;
   }
 
   &:hover,
