--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -9,6 +9,7 @@
     width: 100%;
     padding: 1rem 1.5rem;
     border: .1em solid #D5D2EA;
+    background: transparent;
     border-radius: .2em;
     font-size: 1.8rem;
     font-family: $font-body;
